extractor: update the version of SExtractor to 2.19.5.
This is just an attempt to update the code base and keep the existing
abilities. New features such as model fitting, PSF and galaxy, have
not been looked at and are configured out of the build (this avoids
having to look at all this, and also include ATLAS as a dependency,
externally that would be embarrasing, and internally hard to justify
and build). This could be returned to if there was any interest, but
that is probably best left to vanilla builds of SExtractor and PSFEx.

--- a/applications/extractor/configure.ac
+++ b/applications/extractor/configure.ac
@@ -2,7 +2,7 @@ dnl    Process this file with autoconf to produce a configure script
 AC_REVISION($Revision$)
 
 dnl    Initialisation: package name and version number
-AC_INIT([extractor],[2.5-1],[starlink@jiscmail.ac.uk])
+AC_INIT([extractor],[2.19-5],[starlink@jiscmail.ac.uk])
 AC_CONFIG_AUX_DIR([build-aux])
 
 dnl    Require autoconf-2.50 at least
@@ -26,12 +26,15 @@ dnl    To configure the two components we just run ./configure in the
 dnl    extract and sextractor directories. Do not invoke AC_CONFIG_SUBDIRS,
 dnl    since that prompts autoreconf to try to reconfigure that directory, and
 dnl    automake to assume it's allowed to play there, too.
+dnl
+dnl    Added -disable-model-fitting so that we can build the basic
+dnl    SExtractor without requiring an ATLAS library.
 (
     cd extract
-    ./configure --prefix=$prefix --cache-file=config.cache STARLINK=$STARLINK
+    ./configure --prefix=$prefix --cache-file=config.cache -disable-model-fitting STARLINK=$STARLINK
     cd ..
     cd sextractor
-    ./configure --prefix=$prefix --cache-file=config.cache
+    ./configure --prefix=$prefix --cache-file=config.cache -disable-model-fitting
 )
 
 dnl    Find required versions of the programs we need for configuration
