ast: Allow printf conversions to be used with astAppendString
The macro used to invoke astAppendString has been changed. So any
code that uses astAppendString will need to be recompiled using the
definitions in the new ast.h.

--- a/libraries/ast/configure.ac
+++ b/libraries/ast/configure.ac
@@ -94,6 +94,9 @@ AC_CHECK_FUNCS([backtrace])
 # Do we have reentrant strerror and strtok?
 AC_CHECK_FUNCS([strerror_r strtok_r])
 
+# Do we have vsnprintf?
+AC_CHECK_FUNCS([vsnprintf])
+
 #  See if we have long doubles (used by the Mapping and Region classes)
 AC_CHECK_TYPES([long double])
 
