KAPPA: Correct bad-pixel flag in COPYBAD.
The output NDF bad-pixel flag should be a combination (OR) of whether
or not any bad values were copied from the reference NDF, and the
presence of existing bad values in the input NDF.  As coded it was
possible to inherit a false bad-pixel flag even if bad values had been
introduced during the copy.

This is what I should have done in ea3515667db571.  Not sure why I
didn't want the overhead to check the input NDF for bad values.

--- a/applications/kappa/kappa.news.in
+++ b/applications/kappa/kappa.news.in
@@ -12,6 +12,12 @@
       list of displayed configuration parameters to be written to a
       text file.
 
+   o  COPYBAD
+
+      -  Restore setting the BAD_PIXEL flag for the DATA and VARIANCE
+      components, only setting it false if no bad pixels were copied
+      and none existed in the input NDF.
+
 1 KAPPA_Version_2.1
 
    A new release of KAPPA (2.1) is available.  The main
