--- a/applications/smurf/smurf.ifd.in
+++ b/applications/smurf/smurf.ifd.in
@@ -2794,6 +2794,43 @@ package @PACKAGE@ {
             }
         }
 
+        action jsapaster {
+
+            helplib {$SMURF_HELP}
+
+            parameter in {
+                position 1
+                type NDF
+                access READ
+                vpath {PROMPT }
+                ppath GLOBAL CURRENT
+                association <-GLOBAL.DATA_ARRAY
+                prompt {Input JSA tiles}
+                helpkey *
+            }
+
+            parameter instrument {
+                type LITERAL
+                access READ
+                ppath DYNAMIC CURRENT DEFAULT
+                vpath DYNAMIC PROMPT
+                prompt {JCMT instrument}
+                default {SCUBA-2(850)}
+                helpkey *
+            }
+
+            parameter out {
+                position 2
+                type NDF
+                access WRITE
+                vpath {PROMPT }
+                association ->GLOBAL.DATA_ARRAY
+                prompt {Output mosaic}
+                helpkey *
+            }
+
+        }
+
         action jsatileinfo {
             helplib {$SMURF_HELP}
 
