smurf: Import jsatilemoc script
This completes action item 5 from the JSA meeting on 2014-08-05.

The script has been updated from its original form to make use of
the HEALPix Nside parameter included in the comment of the TILENUM
FITS header, rather than having to guess from the pixel scale.

--- a/applications/smurf/smurf.ifd.in
+++ b/applications/smurf/smurf.ifd.in
@@ -5973,6 +5973,10 @@ package @PACKAGE@ {
         obey {python $SMURF_DIR/jsasplit.py}
     }
 
+    command jsatilemoc {
+        obey {python $SMURF_DIR/jsatilemoc.py}
+    }
+
     command rawregion {
         obey {python $SMURF_DIR/rawregion.py}
     }
