cupid: add shape and nclumps parameters to extractclumps
This shoud have been in a previous commit (0fdfe05f7ca38...) that
added these parameters to the c function, but I forgot to add
cupid.ifd.in to the commit.

--- a/applications/cupid/cupid.ifd.in
+++ b/applications/cupid/cupid.ifd.in
@@ -195,6 +195,22 @@ package cupid {
             helpkey *
           }
 
+         parameter shape {
+            type LITERAL
+            access READ
+            vpath DYNAMIC
+            ppath DYNAMIC
+            prompt {Spatial clump shape in output catalogue}
+            helpkey *
+	 }
+
+          parameter nclumps {
+            type _INTEGER
+            access WRITE
+            vpath DEFAULT
+            default 0
+            helpkey *
+	  }
       }
 
       action findback {
