--- a/applications/obsolete/starbench/configure.ac
+++ b/applications/obsolete/starbench/configure.ac
@@ -2,10 +2,11 @@ dnl    Process this file with autoconf to produce a configure script
 AC_REVISION($Revision: 16836 $)
 
 dnl    Initialisation: package name and version number
-AC_INIT(starbench, 1.4-2, starlink@jiscmail.ac.uk)
+AC_INIT([starbench], [1.4-2], [starlink@jiscmail.ac.uk])
+AC_CONFIG_AUX_DIR([build-aux])
 
 dnl    Require autoconf-2.50 at least
-AC_PREREQ(2.50)
+AC_PREREQ([2.69])
 AM_INIT_AUTOMAKE(1.8.2-starlink)
 
 dnl    Sanity-check: name a file in the source directory -- if this
@@ -21,7 +22,7 @@ STAR_CHECK_PROGS(ifd2star)
 
 dnl    Find required versions of the programs we need for configuration
 AC_PROG_FC
-AC_PROG_LIBTOOL
+LT_INIT
 
 STAR_CNF_COMPATIBLE_SYMBOLS
 
