--- a/applications/ccdpack/ccdpack.ifd.in
+++ b/applications/ccdpack/ccdpack.ifd.in
@@ -188,6 +188,58 @@ package ccdpack {
    CCDPACK commands are now available -- (Version @PACKAGE_VERSION@)
    }
 
+   # Specific additions for hte package.sh file
+   # Note that we define the aliases explicitly here as the
+   # ICL script will define an ICL version.
+   sh {
+      # Script aliases
+      ccdexercise () { $CCDPACK_DIR/ccdexercise ${1+"$@"}; }
+      ccd_ccdexercise () { $CCDPACK_DIR/ccdexercise ${1+"$@"}; }
+
+      ccdfork () { $CCDPACK_DIR/ccdfork ${1+"$@"}; }
+      ccd_ccdfork () { $CCDPACK_DIR/ccdfork ${1+"$@"}; }
+
+      setexercise () { $CCDPACK_DIR/setexercise ${1+"$@"}; }
+      ccd_setexercise () { $CCDPACK_DIR/setexercise ${1+"$@"}; }
+
+      wcsexercise () { $CCDPACK_DIR/wcsexercise ${1+"$@"}; }
+      ccd_wcsexercise () { $CCDPACK_DIR/wcsexercise ${1+"$@"}; }
+
+      ccdwish () { $CCDPACK_DIR/ccdwish ${1+"$@"}; }
+      ccd_ccdwish () { $CCDPACK_DIR/ccdwish ${1+"$@"}; }
+
+      ccdwww () { $CCDPACK_DIR/ccdwww ${1+"$@"}; }
+      ccd_ccdwww () { $CCDPACK_DIR/ccdwww ${1+"$@"}; }
+
+      #  Setup conversion of header information for when using foreign data
+      #  access.
+      if test ! -z "$NDF_XTN"; then
+          # see if the environment variable already include CCDPACK
+          # else append CCDPACK
+          case $NDF_XTN in
+              *CCDPACK*)
+                  ;;
+              *) export NDF_XTN=${NDF_XTN},CCDPACK
+                  ;;
+          esac
+      else
+          export NDF_XTN=CCDPACK
+      fi
+      export NDF_IMP_CCDPACK='$CCDPACK_DIR/ccdimp.csh ^ndf'
+      export NDF_EXP_CCDPACK='$CCDPACK_DIR/ccdexp.csh ^ndf'
+
+#  For IRAF data we really do need to keep hold of the bad pixels
+#  so make sure of this, unless the NDF_TO_IRAF_PARS variable
+#  is already set. In this case we assume that the user knows what
+#  they are doing.
+      if test -z "$NDF_TO_IRAF_PARS" ; then
+         export NDF_TO_IRAF_PARS='FILLBAD=\!'
+      fi
+      #  Explain how to get help.
+      echo "  For help use the commands ccdhelp or ccdwww"
+      echo " "
+   }
+
 #  Specific additions for the package.csh file.
    csh {
 
