--- a/applications/obsolete/ccdbig/Makefile.am
+++ b/applications/obsolete/ccdbig/Makefile.am
@@ -1,32 +1,33 @@
 ## Process this file with automake to produce Makefile.in
 
 bin_MONOLITHS = ccdbgen
-bin_PROGRAMS = timem
-bin_SCRIPTS = ccdbig reslog
+noinst_PROGRAMS = timem
+bin_SCRIPTS = ccdbig reslog $(DYNSCRIPTS)
 
 ccdbgen_SOURCES = ccdbgen.f $(FORTRAN_SOURCES) $(GEN_ROUTINES)
 
 timem_SOURCES = timem.c
 
-bindatadir = $(bindir)
-bindata_DATA = ccdtest.ard ccdbig_obj.dat
+dist_pkgdata_DATA = ccdtest.ard ccdbig_obj.dat
 
 stardocs_DATA = @STAR_LATEX_DOCUMENTATION@
 
-FORTRAN_SOURCES =  big1_abiat.f big1_anoit.f big1_flmult.f big1_objst.f big1_stvt.f pda_rnnor.f
+FORTRAN_SOURCES =  big1_abiat.f big1_anoit.f big1_flmult.f big1_objst.f big1_stvt.f
 GEN_ROUTINES = bgg1_abia.gen  bgg1_anoi.gen  bgg1_flmul.gen bgg1_objs.gen  bgg1_stv.gen
 
 
 # no variable ccdbgen_TASKS -- it is an ATASK
-ccdbgen_LDADD = `$(srcdir)/ccdbig_link_adam`
+ccdbgen_LDADD = `$(srcdir)/ccdbig_link_adam` ../../ccdpack/main/libccdpack.la
 
-TESTS = hdtest
-dist_check_SCRIPTS = hdtest
+CLEANFILES = ccdbgen.ifc
 
-dist_starnews_DATA = hdstrace.news
-dist_pkgdata_DATA = LICENCE
+# Generate IFL file
+IFL_FILES = ccdbgen.ifl
+DYNSCRIPTS = ccdbig.csh ccdbig.icl ccdbig.sh
+BUILT_SOURCES = $(IFL_FILES) $(DYNSCRIPTS)
 
-CLEANFILES = hdstrace.ifc
+$(IFL_FILES) $(DYNSCRIPTS): ccdbig.ifd
+	$(IFD2STAR) ccdbig
 
 #  Run generic to get numeric types.
 GFLAGS = n
