ccdbig: Add welcome message to init script

--- a/applications/obsolete/ccdbig/ccdbig.ifd.in
+++ b/applications/obsolete/ccdbig/ccdbig.ifd.in
@@ -135,4 +135,13 @@ package @PACKAGE@ {
     command ccdbig {
         obey {$CCDBIG_DIR/ccdbig}
     }
+
+    display {
+        @PACKAGE_UPCASE@ commands are now available -- (Version @PACKAGE_VERSION@)
+
+        You would normally want to copy the $CCDBIG_DIR/ccdbig script and edit
+        it to suit your environment. See SSN/69.
+
+        Type "showme ssn69" to view documentation.
+    }
 }
