--- a/etc/init/profile.in
+++ b/etc/init/profile.in
@@ -210,6 +210,12 @@ if test -f ${exec_prefix}/Perl/bin/autoastrom; then
    export AUTOASTROM_DIR=${exec_prefix}/Perl/bin
 fi
 
+#  CCDBIG
+
+if test -f ${bindir}/ccdbig/ccdbig.sh; then
+   export CCDBIG_DIR=${bindir}/ccdbig
+fi
+
 #  CCDPACK
 
 if test -f ${bindir}/ccdpack/ccdpack.sh; then
@@ -489,6 +495,16 @@ if test -f ${exec_prefix}/Perl/bin/autoastrom; then
   autoastrom () { ${STARLINK_DIR}/Perl/bin/perl $AUTOASTROM_DIR/autoastrom  ${1+"$@"}; }
 else
   autoastrom () { ${STARLINK_DIR}/etc/notinst autoastrom; }
+fi
+
+# CCDBIG
+
+if test -f ${bindir}/ccdbig/ccdbig.sh; then
+  ccdbig () { . $CCDBIG_DIR/ccdbig.sh; }
+  ccdbigsetup () { . $CCDBIG_DIR/ccdbig.sh; }
+else
+  ccdbig () { ${STARLINK_DIR}/etc/notinst ccdbig; }
+  ccdbigsetup () { ${STARLINK_DIR}/etc/notinst ccdbig; }
 fi
 
 # CCDPACK
