HDSTRACE: Improve control of text width and prevent misplaced wrapping.
- Added WIDTH parameter to allow more control over the width.
- Default WIDTH to the terminal width.
- Adjust the message-system output size to accommodate chosen width to
  prevent premature line wrapping.
- Only access deprecated Parameter WIDEPAGE if WIDTH is undefined.
- Update start and reference section of SUN/102.  (It needs a fair
  amount of work to use modern LaTeX and hypertext, plus remove VMS
  stuff.)
- Increment to Version 1.2-4.

--- a/applications/hdstrace/Makefile.am
+++ b/applications/hdstrace/Makefile.am
@@ -18,7 +18,7 @@ starhelp_DATA = $(HELP_SOURCES:.hlp=.shl)
 
 
 # no variable hdstrace_TASKS -- hdstrace is an ATASK
-hdstrace_LDADD = $(LDADD) tra/libtra.la `prm_link_adam` `hds_link_adam` `fio_link_adam` `par_link_adam`
+hdstrace_LDADD = $(LDADD) tra/libtra.la `prm_link_adam` `hds_link_adam` `fio_link_adam` `par_link_adam` `one_link`
 
 TESTS = hdtest
 dist_check_SCRIPTS = hdtest
