latexsupport: minipages should now work in html output
This might fail on nested mini pages, and will probably not always
correctly clear at the end. May need more work.

--- a/applications/latexsupport/starlinkxhtml.cfg
+++ b/applications/latexsupport/starlinkxhtml.cfg
@@ -73,6 +73,59 @@
           }
 
 
+
+%%%%%%%%%%%% ---------- MINIPAGE
+%%% (from http://tex.stackexchange.com/questions/195226/configuring-minipage-environment-to-incorporate-width
+
+\makeatletter
+
+% % we must refer to minipage from the css file, because tags are being
+% % written before we know dimensions
+
+\usepackage{etoolbox}
+\ifwithchapters
+
+%% counter will be reset at chapters if you don't change this.
+\preto{\chapter}{\stepcounter{minimycount}}
+\else
+\preto{\section}{\stepcounter{minimycount}}
+\fi
+
+\newcounter{minimycount}
+\newlength{\myminipagewidth}
+\usepackage[nomessages]{fp}
+
+
+% % save original minipage
+\let\oldiimini\@iiiminipage
+
+% % redefine minipage
+\def\@iiiminipage#1#2[#3]#4{%
+
+  \setlength{\myminipagewidth}{#4}
+
+  \edef\valuemyminipagewidth{\strip@pt\myminipagewidth}
+  \edef\valuemylinewidth{\strip@pt\linewidth}
+  \FPeval\result{100*\valuemyminipagewidth/\valuemylinewidth}
+
+  \xdef\miniwidth{\result \%}
+
+  \oldiimini{#1}{#2}[#3]{#4}
+}
+
+%% Configure the minipage environment.
+\ConfigureEnv{minipage}{%
+\stepcounter{minimycount}\ifvmode\IgnorePar\fi\EndP\HCode{<div
+  class="minipage" align="center" id="mini-page\expandafter\theminimycount">}}
+{\ifvmode\IgnorePar\fi\EndP\HCode{</div>\Hnewline}%
+% we must write dimension here to the css file
+\Css{div\#mini-page\expandafter\theminimycount{width:\miniwidth}}%
+\typeout{div\#mini-page\expandafter\theminimycount{width:\miniwidth}}%
+}{}{}
+\makeatother
+
+
+
 %%%%%%%%%%%%%%-------------- BEGIN DOCUMENT
 \begin{document}
 
