latexsupport: various tweaks
- old .aux files from pdf build should break htlatex with pgfsyspdfmark
- cleaned up and improved starlink_basic.css file

--- a/applications/latexsupport/tex4ht.env
+++ b/applications/latexsupport/tex4ht.env
@@ -126,6 +126,14 @@ i~/tex4ht.dir/texmf/tex4ht/ht-fonts/ascii/!
 i~/tex4ht.dir/texmf/tex4ht/ht-fonts/alias/!
 </unihtf>
 
+<starfont>
+i~~/starfont/charset/
+i~/tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/!
+i~/tex4ht.dir/texmf/tex4ht/ht-fonts/ascii/!
+i~/tex4ht.dir/texmf/tex4ht/ht-fonts/alias/!
+</starfont>
+
+
 <emspkhtf>
 i~/tex4ht.dir/texmf/tex4ht/ht-fonts/html-speech/!
 i~/tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/!
