kappa: Allow setqual to store a constant value in the quality array

--- a/applications/kappa/kappa.ifd.in
+++ b/applications/kappa/kappa.ifd.in
@@ -2263,6 +2263,16 @@ package kappa {
             helpkey *
          }
 
+         parameter qvalue {
+            type _INTEGER
+            access READ
+            vpath DEFAULT
+            ppath CURRENT DEFAULT
+            prompt {Quality value (0-255)}
+            default !
+            helpkey *
+         }
+
          parameter readonly {
             type _LOGICAL
             access READ
