Change AC_PROG_77 to AC_PROG_FC. I do this slightly tentatively, because (a) this directory notes that its contents 'could do with some modernisation', and (b) it's a demonstration setup, which might therefore be slightly odd in other ways.  All that said, this change doesn't obviously break anything....

--- a/docs/sc/013/examples/configure.ac
+++ b/docs/sc/013/examples/configure.ac
@@ -121,6 +121,8 @@ if test -z "$PROFILINGOPTION" -o -z "$NOUNDERSCORES"; then
     esac
 fi
 
+AC_PROG_FC
+
 dnl  Now test the options we have set up, by compiling a simple
 dnl  Fortran program
 AC_LANG_PUSH([Fortran 77])
