latexsupport: allow sideways tables and pages

--- a/applications/latexsupport/starlinkxhtml.cfg
+++ b/applications/latexsupport/starlinkxhtml.cfg
@@ -160,7 +160,7 @@
 \Configure{textbf}{\ifvmode \ShowPar\fi \HCode{<b>}}{\Tg</b>}
 \Configure{textsf}{\ifvmode \ShowPar\fi \HCode{<span  class="sf">}}{\Tg</span>}
 \Configure{textit}{\ifvmode \ShowPar\fi \HCode{<em>}}{\HCode{</em>}}
-
+\Configure{emph}{\ifvmode \ShowPar\fi \HCode{<em>}}{\HCode{</em>}}
 
 
 
