--- a/libraries/kaplibs/ccg/ccg_sum1.gn
+++ b/libraries/kaplibs/ccg/ccg_sum1.gn
@@ -56,7 +56,7 @@
 
 *  Copyright:
 *     Copyright (C) 2005-2006 Particle Physics & Astronomy Research
-*     Council. Copyright (C) 2009 Science & Technology Facilities
+*     Council. Copyright (C) 2009, 2014 Science & Technology Facilities
 *     Council. All Rights Reserved.
 
 *  Licence:
@@ -91,6 +91,8 @@
 *     2009 July 17 (MJC):
 *        Do not include collapsed data comprising only bad values
 *        in argument NBAD.
+*     2014 December 1 (MJC):
+*        Fix bug that caused variances to be set to zero.
 *     {enter_further_changes_here}
 
 *-
@@ -204,7 +206,8 @@
 *  normalised to the data value in case the releative numbers of good
 *  values and variances are disparate.
          IF ( NGOODV .GE. MINPIX ) THEN
-            RESVAR( I ) = NUM_DTO<T>( SUMV * DBLE( NGOOD / NGOODV ) )
+            RESVAR( I ) = NUM_DTO<T>( SUMV *
+     :                    DBLE( NGOOD )/ DBLE( NGOODV ) )
 
 *  Trap numeric errors.
             IF ( .NOT. NUM_WASOK() ) THEN
